fix timeline and testimonials blocks alignments

--- a/assets/sass/_theme/blocks/testimonials.sass
+++ b/assets/sass/_theme/blocks/testimonials.sass
@@ -89,12 +89,10 @@
                 i
                     background-color: $block-testimonials-pagination-progress-background
                     width: 0
-
-    body:not(.programs__section)
-        @include in-page-without-aside
-            .testimonials
-                @include media-breakpoint-up(md)
-                    padding-right: col(4)
+    @include in-page-without-aside
+        .testimonials
+            @include media-breakpoint-up(md)
+                padding-right: calc(#{col(4)} + #{$grid-gutter})
 
         // TODO : en discuter en créa
         // figure
