--- a/assets/sass/_theme/blocks/timeline.sass
+++ b/assets/sass/_theme/blocks/timeline.sass
@@ -105,7 +105,7 @@
 
     @include media-breakpoint-up(md)
         .timeline
-            padding-left: col(5)
+            padding-left: calc(#{col(5)} + #{$grid-gutter})
 
     @include media-breakpoint-down(md)
         .events
